updates mid September 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -95,7 +95,6 @@ bookmarks, colorlinks, breaklinks,
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
 \emph{Senior Lecturer in Music and Audio Technology}\\
-\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}\\
 Leicester Media School\\
 Faculty of Computing, Engineering and Media\\
 De Montfort University (DMU)\\
@@ -104,15 +103,17 @@ De Montfort University\\
 Leicester LE1 9BH United Kingdom\\[.2cm]
 %\textsc{phone}: \texttt{(+44) (0) 737-879-6645}\\
 \textsc{email}: \href{mailto:anna.xambo@dmu.ac.uk}{anna.xambo@dmu.ac.uk}\\
-\textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
+\textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}
 
 %%\hrule
 \section*{Current Academic Roles}
 ---\emph{Senior Lecturer in Music and Audio Technology}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
+---\emph{BSc Digital Music Technology Programme Leader}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
+---\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Poster Co-Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
----\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
+---\emph{Women in NIME (WiNIME) Officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{Conference Programme Committee Member}. ACM Tangible, Embedded and Embodied Interaction 2021. Salzburg, Austria.\\
+---\emph{Conference Programme Committee Member}. ACM Creativity \& Cognition 2021. Venice, Italy.
 
 %%\hrule
 \section*{Areas of Interest}
@@ -141,7 +142,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 
 %\hrule
 \section*{Music Education}
-\noindent
+%\noindent
 \subsection*{Classical Training}
 \years{1983--1987}\textsc{Piano}, Conservatori Superior de Música del Liceu, Barcelona.\\
 \years{1982--1988}\textsc{Music Theory \& Solfege}, Conservatori Superior de Música del Liceu, Barcelona.
@@ -182,12 +183,12 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %{\small Web interface design of different portals of the Catalan TV corporation (tv3.cat, catradio.cat, ritmes.net, among others). Web interface design of the sitcom Lo Cartanyà (locartanya.com). Mobile design of the prototype 3alacarta.}\\
 \years{05/2001--08/2002}\textsc{Web Designer \&  Motion Graphic Designer}. TerraNetworks | UranoFilms. Barcelona. \\
 %{\small Web interface design and flash design of AV internet content about electronic music and digital culture.}\\
-\years{04/2000--05/2001}\textsc{Web Designer \&  Motion Graphic Designer}. MediaPark | ParkNet, Barcelona. \\%[1.3cm]%hack
+\years{04/2000--05/2001}\textsc{Web Designer \&  Motion Graphic Designer}. MediaPark | ParkNet, Barcelona. %[1.3cm]%hack
 %{\small Flash design of animations games for the Internet soccer portal futvol.com.} \\[1.1cm]
 
 %\hrule
 \section*{Honors \& Awards}
-\noindent
+%\noindent
 
 \subsection*{Academic Grants, Honors \& Awards}
 \years{2019b} \textsc{Web Audio Conference 2019 Best Paper Award}. NTNU, Trondheim, Norway.\\
@@ -206,7 +207,7 @@ Role: Creator \& Director.
 
 %\hrule
 \section*{Grants \& Funding}
-\noindent
+%\noindent
 
 \subsection*{Principal Investigator}
 
@@ -302,11 +303,11 @@ Candidate’s Share: 50\% (1,500 \euro)
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
 \textbullet \- \href{https://dora.dmu.ac.uk/browse?type=author&value=Xambo,\%20Anna}{DORA (De Montfort Open Research Archive)}\\
 \textbullet \- \href{https://app.cristin.no/persons/show.jsf?id=997893}{CRISTIN (Current Research Information System in Norway)}\\
-\textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
+\textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}
 %[1.2cm]%hack
 
 \section*{Publications}
-\noindent
+%\noindent
 
 \subsection*{Books}
 \noindent
@@ -318,7 +319,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
 
-\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (2020). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". In  Eiksund, Ø. J., Angelo, E., Knigge, J. eds. Music Technology in Education -- Channeling and Challenging Perspectives. Cappelen Damm Akademisk. pp. 73--93.\\
+\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (2020). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". In Eiksund, Ø. J., Angelo, E., Knigge, J. eds. Music Technology in Education -- Channeling and Challenging Perspectives. Cappelen Damm Akademisk, Oslo. pp. 73--98.\\
 \years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: An Interdisciplinary Approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
@@ -332,7 +333,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Journal Articles}
 \noindent
 {\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Submitted to the \emph{Special Issue on Web Audio}. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.}\\
-\years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \eXambo.brief.CVmph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
+\years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
@@ -400,7 +401,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2004}\textbf{Xambó, A.}, Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of New Technologies and Audiovisual Communication in the Primary Education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
 
 \section*{Talks, Panels \& Oral Presentations}
-\noindent
+%\noindent
 
 \subsection*{External}
 \noindent
@@ -463,7 +464,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2010a} \textsc{Oral Presenter}. (May, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{Music Research Day}, Music Research Studio, OU, Milton Keynes, UK.
 
 \section*{Poster Presentations, Demos \& Workshops}
-\noindent
+%\noindent
 
 \subsection*{Poster Presentations \& Demos}
 \noindent
@@ -507,7 +508,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2016} \textbf{Xambó, A.} (October 28, 2016). “Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.%\\[3cm]%hack
 
 \section*{Discography}
-\noindent
+%\noindent
 
 \subsection*{Solo Albums}
 \noindent
@@ -551,7 +552,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.%\\[2cm]%hack
 
 \section*{Selected Performances}
-\noindent
+%\noindent
 
 \subsection*{Solo Performances}
 \noindent
@@ -573,6 +574,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
+\years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
 \years{2018d}Martin, C.M., Lesteberg, M., Jawad, K., Aandahl, E., \textbf{Xambó, A.} (August 29, 2018). ``Stillness during Tension''. \emph{MCT Open Seminar}. MCT Portal, NTNU / UiO, Trondheim / Oslo.\\   
@@ -595,7 +597,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2018}\emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
 \section*{Other Creative Products}
-\noindent
+%\noindent
 
 \subsection*{Awarded Music Hacks}
 \noindent
@@ -666,7 +668,7 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 
 %\hrule
 \section*{Teaching \& Coordination}
-\noindent
+%\noindent
 
 \subsection*{Graduate Courses}
 \noindent
@@ -775,10 +777,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
 Escola Glòries, Barcelona.\\
-Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
+Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
 \section*{Supervision}
-\noindent
+%\noindent
 
 \subsection*{Master Students}
 \years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad (Music Communication Technology, NTNU). Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
@@ -788,17 +790,17 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 
 \section*{Mentoring}
 \years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
-\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.\\
+\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.
  
 \section*{External Examining}
 \noindent
 
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
 \years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
-\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
+\years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.
 
 \section*{Additional Experience}
-\noindent
+%\noindent
 
 \subsection*{Concerts Co-Organization}
 \noindent
@@ -827,14 +829,15 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \noindent
 
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\%[1.3cm]%hack
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.%[1.3cm]%hack
 
 %\hrule
 \section*{Professional Activities}
-\noindent
+%\noindent
 
 \subsection*{Professional Organization Member}
 \noindent
+\emph{Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2})$.}\\
 \emph{Association for Computing Machinery (ACM)}.\\
 \emph{International Computer Music Association (ICMA)}.
 
@@ -842,25 +845,26 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Programme Leader}
 \noindent
 
-\years{01/2019--12/2019}\textsc{MCT Programme Study Leader} Department of Music, NTNU.\\
+\years{09/2020--present}\textsc{BSc Digital Music Technology Programme Leader}, Leicester Media School, DMU.\\
+\years{01/2019--12/2019}\textsc{MCT Programme Study Leader}, Department of Music, NTNU.\\
 \years{01/2019--12/2019}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
 
 
 \subsection*{Fellow}
 \noindent
 
-\years{2019}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
+\years{2019--present}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
 \years{2018--2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS),  Queen Mary University of London (QMUL).
 
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2020d}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
 \years{2020c}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
 \years{2020b}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
-\years{2020a}\textsc{Conference Poster Co-Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
-\years{2019i--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
-\years{2019h}\textsc{Conference Local Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
-\years{2019g}\textsc{Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2020a}\textsc{Conference Poster Co-Chair \& Conference Programme Committee Member}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
+\years{2019h--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
+\years{2019g}\textsc{Conference Local Committee Member \& Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019f}\textsc{Conference General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019e}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019d}\textsc{Conference Session Chair} (``Mapping \& Sound Generation''). \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
@@ -912,7 +916,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Journal Reviewer}
 \noindent
 
-\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019--2020).\\
+\years{2019b}\emph{Computer Music Journal}. MIT Press Journals (2019, 2020).\\
 \years{2019a}\emph{Arts}. MDPI.\\
 \years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
@@ -988,7 +992,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 
 %\hrule
 \section*{Skills}
-\noindent
+%\noindent
 
 \subsection*{Languages}
 \noindent
