--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -107,7 +107,7 @@ Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audi
 I have been associate professor, NTNU (2018--2019) where I also was MCT master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--2019) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--2019) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
 
-{\textbf{Grants/Awards}} from HDI / EPSRC (2020); from NTNU (2018--2020, 2019); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (2001--2002, 1998--1999).\\
+{\textbf{Grants/Awards}} from HDI / EPSRC (2020); from NTNU (2019, 2018--2020); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (1998--1999, 2001--2002).\\
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
@@ -119,7 +119,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Conference Organizer}} for Web Audio Conference (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); New Interfaces for Musical Expression Conference (2019, paper co-chair, session chair); International Conference of Live Interfaces (2020, conference local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); International Computer Music Conference (2011, session chair); and Tangible, Embedded, and Embodied Interaction Conference (2020--2021, programme committee member).\\
 
-{\textbf{Interviews/Press Coverage}} in Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
+{\textbf{Interviews/Press Coverage}} in OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--2012); Universitat Pompeu Fabra (2011); and The Open University (2010).\\
 
