--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -112,7 +112,6 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 ---\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
 ---\emph{Women in NIME (WiNIME) Officer}, International Conference of New Interfaces for Musical Expression.\\
----\emph{Conference Programme Committee Member}. ACM Tangible, Embedded and Embodied Interaction 2021. Salzburg, Austria.\\
 ---\emph{Conference Programme Committee Member}. ACM Creativity \& Cognition 2021. Venice, Italy.
 
 %%\hrule
@@ -159,6 +158,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
+\years{2020}\textsc{Research Supervision} (with certificate). Instructors: Sally Ruane (module 1), Deborah Cartmell (module 2), Meera Warrier (module 3). DMU. Leicester, UK.\\
 \years{2018--2019}\textsc{Learning and Teaching in Higher Education} (with certificate). Instructors: Emma Kennedy (module 1), Alison Gilmour (module 2), Maren Thom (module 2). QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
@@ -327,12 +327,12 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Peer-Reviewed Journal Special Issues}
 \noindent
-\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.
+\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).
 
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Submitted to the \emph{Special Issue on Web Audio}. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.}\\
+{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Accepted to appear at the \emph{Special Issue on Web Audio}. \emph{Journal of Audio Engineering Society}, 68(10), pp. TBD.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
@@ -406,7 +406,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2020} \textsc{Keynote Speaker} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/fWqhhdkVO6o}{[video]}\\ 
+\years{2020c} \textsc{Oral Presenter (online)} (October 6, 2020). “From Tabletop Tangible Interfaces to Virtual Agents in Live Coding: Five Years of Research in Progress". \emph{IUPUI MAT PhD seminar}. Department of Music and Arts Technology, Purdue School of Engineering and Technology, Indiana University--Purdue University Indianapolis, Indianapolis, IN, USA.\\ 
+\years{2020b} \textsc{Oral Presenter (online)} (September 21, 2020). “Virtual Agents in Live Coding: Preliminary Investigations". \emph{Meetup for Women in Arts and Technology}. NOTAM, Oslo, Norway.\\ 
+\years{2020a} \textsc{Keynote Speaker (online)} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/fWqhhdkVO6o}{[video]}\\ 
 \years{2019d} \textsc{Oral Presenter} (December 5, 2019). “Facilitating Team-Based Programming Learning with Web Audio". \emph{WAC '19}. 
 \emph{NTNU}, Trondheim, Norway.\\
 \years{2019c} \textsc{Oral Presenter} (November 22, 2019). “Research as Practice / Practice as Research: Real-time Algorithmic Music Experiences and Women in Music Technology". \emph{NOTAM}, Oslo, Norway.\\
@@ -440,6 +442,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Own Institution}
 \noindent
 
+\years{2020} \textsc{Oral Presenter}. (November 25, 2020). “Music performance with crowdsourced sounds: collaboration by chance". \emph{MUST5001 Aesthetics and Ideas in the Sonic Arts}. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Oral Presenter} together with Jensenius, A., Jawad, K. and Aandahl, E. (May 23, 2019). “International joint Master's programme in Music, Communication \& Technology". \emph{Instituttseminar for sosiologi og statsvitenskap}. NTNU Department of Sociology and Political Science, Rockheim, Trondheim, Norway.\\
 \years{2019b} \textsc{Oral Presenter}. (March 25, 2019). “Summary of my research and teaching 2018-2019". \emph{Faglig Forum}. Music Technology, NTNU, Trondheim, Norway.\\
 \years{2019a} \textsc{Oral Presenter} together with Jawad, K. and Lesteberg, M. (January 31, 2019). “Women Nordic Music Technology". \emph{Girls Geek Dinner Trondheim}. Music Technology, NTNU, Trondheim, Norway.\\
@@ -492,7 +495,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Workshops}
 \noindent
 
-\years{2020}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". \emph{NIME '20}. Birmingham, UK.\\
+
+\years{2020b}\textbf{Xambó, A.} (September 25, 2020). “Creative Audio Programming for the Web with Tone.js". \emph{Women Who Code} workshop series, School of Media Arts, Columbia College Chicago, IL, USA.\\
+\years{2020a}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". \emph{NIME '20}. Birmingham, UK.\\
 \years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
 \years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
 \years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
@@ -557,6 +562,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
+\years{2020d}\textbf{Xambó, A.} (November 14, 2020). Live coding session. \emph{Sound Junction Satellites: Live Coding \& 3-D Sound}. University of Sheffield Concerts. Octagon Centre, Sheffield, UK.\\
 \years{2020c}\textbf{Xambó, A.} (July 17, 2020). ``A Live Coding Exploration of How the Network Sounds''. \emph{Network Music Festival 2020}. Streaming from Sheffield, UK.\\
 \years{2020b}\textbf{Xambó, A.} (March 22, 2020). ``Crowdsourced Eulerisms''. \emph{Eulerroom Equinox 2020}. Streaming from Sheffield, UK.\\
 \years{2020a}\textbf{Xambó, A.} (February 28, 2020). ``A situated live coding session''. \emph{MTI Concert} celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK.\\
@@ -699,6 +705,12 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{10/2020--12/2020}Course: \emph{MATD2004 Further Digital Signal Processing} (10 h). \# Students: $\sim$14. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures, seminars and labs (blended teaching), instruction and assessment.\\
+\years{10/2020--12/2020}Course: \emph{MATD2019 Further Audio Electronics} (10 h). \# Students: $\sim$10. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures and seminars (blended teaching), instruction and assessment.\\
 \years{01/2020--04/2020}Course: \emph{MATD1019 Audio Electronics Fundamentals} (12 h). \# Students: $\sim$12. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
@@ -856,19 +868,20 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{2019--present}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
 \years{2018--2019}\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS),  Queen Mary University of London (QMUL).
 
-\subsection*{Academic Chair / Committee Member / Conference Chair}
+\subsection*{Academic Chair / Committee Member / Conference Chair / Conference Meta-Reviewer}
 \noindent
 
-\years{2020d}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
-\years{2020c}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
-\years{2020b}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
-\years{2020a}\textsc{Conference Poster Co-Chair \& Conference Programme Committee Member}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
+\years{2020e}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
+\years{2020d}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
+\years{2020c}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
+\years{2020b}\textsc{Conference Poster Co-Chair \& Conference Programme Committee Member}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
+\years{2020a}\textsc{Conference Meta-Reviewer}\emph{New Interfaces for Musical Expression} (2020).\\
 \years{2019h--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
 \years{2019g}\textsc{Conference Local Committee Member \& Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019f}\textsc{Conference General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
-\years{2019e}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
+\years{2019e}\textsc{Conference Programme Committee Member \& Meta-Reviewer}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019d}\textsc{Conference Session Chair} (``Mapping \& Sound Generation''). \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
-\years{2019C}\textsc{Conference Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019c}\textsc{Conference Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019b}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
 \years{2019a}\textsc{Conference Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018b}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2018}. Berlin, Germany.\\ 
@@ -893,25 +906,18 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
 \years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
 \years{2018--2020}\emph{International Society for Music Information Retrieval Conference} (2018--2020).\\
-\years{2017--2019}\emph{ACM Creativity and Cognition} (2017, 2019).\\
+\years{2017--2021}\emph{ACM Creativity and Cognition} (2017, 2019, 2021).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
 \years{2016, 2020}\emph{International Conference on Live Interfaces} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
 \years{2016--2019}\emph{Web Audio Conference} (2016--2019).\\
-\years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2020).\\
+\years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2021).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2012--2020}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2020).\\
-\years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2019).
-
-\subsection*{Conference Meta-Reviewer}
-\noindent
-
-\years{2020}\emph{New Interfaces for Musical Expression} (2020).\\
-\years{2019}\emph{Web Audio Conference} (2019).
-
+\years{2012--2020}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2021).\\
+\years{2011--2019}\emph{New Interfaces for Musical Expression} (2011--2020).
 
 \subsection*{Journal Reviewer}
 \noindent
@@ -1010,7 +1016,8 @@ Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, Pu
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty).\\
 Online Learning Platforms: Blackboard, Canvas.\\
-Hardware: Arduino, Bela, Lindos.
+Hardware: Arduino, Bela, Lindos.\\
+Circuit simulators: Tinkercad, OrCAD.
 
 %\vspace{1cm}
 \vfill{}
